Add photometryMapping python tests
Improve photometryMapping pybind11

NOTE: photoMapping test don't all pass yet!

Improve photoTransfo tests (squashme)

--- a/python/lsst/jointcal/SConscript
+++ b/python/lsst/jointcal/SConscript
@@ -10,6 +10,7 @@ scripts.BasicSConscript.pybind11(
      'gtransfo',
      'jointcalControl',
      'mappings',
+     'photometryMappings',
      'photometryModels',
      'photometryTransfo',
      'projectionHandler',
